tests/parser-test-files/bad-files/parse-expression.3.error
error: Invalid literal
  --> test:4:10
   |
 4 |  (define x #C(1 2))
   |            ^^^^^^^ unknown literal type
